src/stylesheets/base.css
@import "../stories/atoms/Link/Link.css";

html {
  @media (prefers-reduced-motion: no-preference) {
    scroll-behavior: smooth;
  }
}

body {
  font-family: var(--text-font-family);
  font-weight: var(--text-font-weight);
  font-size: var(--text-font-size);
  line-height: var(--text-line-height);
  color: var(--text-color);
}

p {
  margin-block: 0;
  margin-inline: 0;
}

ul, ol {
  margin-block: 0;
  margin-inline: 0;
  padding-inline: 0;
}

